Committing changes to main files

--- a/index.html
+++ b/index.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
-
 <head>
+<meta charset="UTF-8">
+<title>What's Cooking, MIT?</title>
+
+<link rel="stylesheet" type="text/css" href="./css/main.css">
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
 <script src="data.js" type="text/javascript"></script>
-
 <script type="text/javascript">
-
 $(document).ready(function(){
-
 	loadDiningData();
-
 });
-
 </script>
-
 </head>
 
 <body>
-
+<div id="desc">
 <p id="simmons"></p>
-
 <hr/>
-
 <p id="maseeh"></p>
-
 <hr/>
-
 <p id="baker"></p>
-
 <hr/>
-
 <p id="mccormick"></p>
-
 <hr/>
-
 <p id="next"></p>
-
-
+</div>
 
 </body>
-
 </html>
