--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>What's Cooking, MIT?</title>
 
 <link rel="stylesheet" type="text/css" href="./css/main.css">
+<meta http-equiv="refresh" content="300">
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="data.js" type="text/javascript"></script>
